# Chatbot

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE_AS_IS.md  Makefile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260312_01_initial_schema.py
app/: main.py
app/application/dto/: create_booking_dto.py  respond_to_message_dto.py
app/application/ports/: llm_client.py
app/application/use_cases/: cancel_booking.py  create_booking.py  create_resource.py  create_service.py  get_booking.py  list_bookings.py  list_resources.py  list_services.py  respond_to_message.py
app/domain/: exceptions.py
app/domain/entities/: booking.py  conversation.py  customer.py  resource.py  service.py
app/domain/repositories/: booking_repository.py  conversation_repository.py  resource_repository.py  service_repository.py
app/domain/services/: availability_policy.py
app/domain/value_objects/: booking_status.py  conversation.py  (+1 more)
docs/adr/: 0001-demo-stack-v1.md  0002-architecture-contract-v1.md  0003-booking-lifecycle-policy-v1.md
scripts/: chat_console.py  chat_flow_manicure.sh
tests/: conftest.py  test_availability_policy.py  test_catalog_use_cases.py  test_chat_health_http.py  test_chat_http_integration.py  test_chat_transactional.py  test_chat_transactional_http.py  test_create_booking.py  test_http_catalog_list.py  test_http_integration.py  test_http_security.py  test_llm_factory.py  test_startup_bootstrap_policy.py  test_time_slot.py
(+28 files in other folders)
