[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.133.1",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.47",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]


